# server/module/service-common/common_service_carousel.go
@@ -1,0 +1,11 @@
+package service_common
+
+import (
+	"context"
+	"github.com/krilie/lico_alone/module/module-carousel/model"
+)
+
+func (a *CommonService) QueryCarousel(ctx context.Context) (list []*model.Carousel, err error) {
+	isOnShow := true
+	return a.moduleCarousel.QueryCarousel(ctx, &isOnShow)
+}
